--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -11,42 +11,44 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.gr.java_conf.star_diopside.sound.controller.SoundController">
-	<children>
-		<GridPane hgap="8.0" vgap="8.0">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints vgrow="SOMETIMES" />
-				<RowConstraints vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
-			</rowConstraints>
-			<children>
-				<TextField fx:id="selectedFile" minWidth="400.0" />
-				<GridPane hgap="4.0" vgap="4.0" GridPane.columnIndex="1">
-					<columnConstraints>
-						<ColumnConstraints hgrow="SOMETIMES" />
-						<ColumnConstraints hgrow="SOMETIMES" />
-					</columnConstraints>
-					<rowConstraints>
-						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-					</rowConstraints>
-					<children>
-						<Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectDirectory" text="ディレクトリ選択" />
-						<Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectFile" text="ファイル選択" GridPane.columnIndex="1" />
-					</children>
-				</GridPane>
-				<HBox GridPane.columnSpan="2" GridPane.rowIndex="1">
-					<children>
-						<Button mnemonicParsing="false" onAction="#onFileAdd" text="追加" />
-					</children>
-				</HBox>
-				<ListView fx:id="files" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-			</children>
-			<padding>
-				<Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-			</padding>
-		</GridPane>
-	</children>
+    <children>
+        <GridPane hgap="8.0" vgap="8.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <TextField fx:id="selectedFile" minWidth="400.0" />
+                <GridPane hgap="4.0" vgap="4.0" GridPane.columnIndex="1">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectDirectory" text="ディレクトリ選択" />
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectFile" text="ファイル選択" GridPane.columnIndex="1" />
+                    </children>
+                </GridPane>
+                <HBox spacing="4.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                    <children>
+                        <Button mnemonicParsing="false" onAction="#onFileAdd" text="追加" />
+                        <Button mnemonicParsing="false" onAction="#onStart" text="開始" />
+                        <Button mnemonicParsing="false" onAction="#onStop" text="終了" />
+                    </children>
+                </HBox>
+                <ListView fx:id="files" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            </children>
+            <padding>
+                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+            </padding>
+        </GridPane>
+    </children>
 </VBox>
