--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,15 +13,17 @@
 
 <VBox xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.gr.java_conf.star_diopside.sound.controller.SoundController">
     <children>
-        <GridPane hgap="8.0" vgap="8.0">
+        <GridPane hgap="8.0" vgap="8.0" VBox.vgrow="ALWAYS">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
+                <ColumnConstraints hgrow="SOMETIMES" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" />
             </columnConstraints>
             <rowConstraints>
+                <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <TextField fx:id="selectedFile" minWidth="400.0" />
@@ -37,7 +40,7 @@
                         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectFile" text="ファイル選択" GridPane.columnIndex="1" />
                     </children>
                 </GridPane>
-                <HBox spacing="4.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                <HBox spacing="4.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
                     <children>
                         <Button mnemonicParsing="false" onAction="#onFileAdd" text="追加" />
                         <Button mnemonicParsing="false" onAction="#onStart" text="開始" />
@@ -47,7 +50,9 @@
                         <Button mnemonicParsing="false" onAction="#onClear" text="クリア" />
                     </children>
                 </HBox>
-                <ListView fx:id="files" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+                <Label fx:id="status" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
+                <ListView fx:id="files" prefHeight="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+                <ListView fx:id="history" prefHeight="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
             </children>
             <padding>
                 <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
