パッケージ名の変更

--- a/sound-app/src/main/resources/fxml/main.fxml
+++ b/sound-app/src/main/resources/fxml/main.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.gr.java_conf.star_diopside.sound.controller.SoundController">
+<VBox xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.gr.java_conf.stardiopside.sound.controller.SoundController">
     <children>
         <GridPane hgap="8.0" vgap="8.0" VBox.vgrow="ALWAYS">
             <columnConstraints>
