--- a/sound-app/src/main/resources/jp/gr/java_conf/stardiopside/sound/main.fxml
+++ b/sound-app/src/main/resources/jp/gr/java_conf/stardiopside/sound/main.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.gr.java_conf.stardiopside.sound.controller.SoundController">
+<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jp.gr.java_conf.stardiopside.sound.controller.SoundController">
     <children>
         <GridPane hgap="8.0" vgap="8.0" VBox.vgrow="ALWAYS">
             <columnConstraints>
@@ -23,7 +25,6 @@
                 <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <TextField fx:id="selectedFile" minWidth="400.0" />
@@ -33,7 +34,7 @@
                         <ColumnConstraints hgrow="SOMETIMES" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
                         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectDirectory" text="ディレクトリ選択" />
@@ -50,9 +51,27 @@
                         <Button mnemonicParsing="false" onAction="#onClear" text="クリア" />
                     </children>
                 </HBox>
-                <Label fx:id="status" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
-                <ListView fx:id="files" prefHeight="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
-                <ListView fx:id="history" prefHeight="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+                <GridPane hgap="4.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+                    <columnConstraints>
+                        <ColumnConstraints />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints />
+                    </rowConstraints>
+                    <children>
+                        <Label fx:id="trackPosition" />
+                        <ProgressBar fx:id="trackProgress" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" />
+                        <Label fx:id="trackLength" GridPane.columnIndex="2" />
+                    </children>
+                </GridPane>
+                <SplitPane dividerPositions="0.25" orientation="VERTICAL" prefHeight="400.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+                    <items>
+                        <ListView fx:id="files" />
+                        <ListView fx:id="history" />
+                    </items>
+                </SplitPane>
             </children>
             <padding>
                 <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
